2013-03-19 Joerg Wunsch <joerg.wunsch@atmel.com>

	* src/devdescr.cc (ATmega256RFR2, ATmega2564RFR2, ATmega128RFR2,
	ATmega1284RFR2, ATmega64RFR2, ATmega644RFR2):
	New devices
	* src/ioreg.cc (atmega256rfr2_io_registers): New entry, used for
	all of the ATmega*RFR2 devices.
	* src/ioreg.h: (Dito.)

2013-02-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc: Turn the write operation of the packet length
	and the packet itself into an atomic one when writing to the
	upstream pipe, in order to avoid a race condition when handling
	JTAGICE3 event messages.

2013-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3run.cc (jtag3::getProgramCounter): Add some ugly hack
	to work around problems single-stepping a SLEEP instruction
	* src/jtag3rw.cc (jtag3::jtagRead): (Dito.)

2013-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3io.cc (jtag3::setDeviceDescriptor): avoid an overly
	aggressive compiler optimization on a parameter struct d3

2013-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2rw.cc (jtag2::jtagRead): delete response before throwing
	out
	* src/jtag3rw.cc (jtag3::jtagRead): (Dito.)

2013-01-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtagrw.cc (jtag1::jtagRead): When attempting to read more than
	256 bytes, throw an exception rather than returning a nonsensical
	value.
	* src/jtag3io.cc (jtag3::startJtagLink): Fix an off-by-one error
	when preparing the AVR sign-on command.
	* src/jtag2usb.cc (opendev): fix devnamecopy deletion.

2013-01-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3io.cc (initJtagOnChipDebugging): reenable CMD3_START_DEBUG
	for Xmega (even over JTAG)

2013-01-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/avarice.1: Document the JTAGICE3 support.
	* src/main.cc (usage): (Dito.)

2013-01-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/main.cc (makeSocket): Be a little more verbose if bind()
	failed with EADDRINUSE.

2013-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
